tests/ui/associated-type-bounds/return-type-notation/missing.stderr
warning: the feature `return_type_notation` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/missing.rs:3:12
   |
LL | #![feature(return_type_notation, async_fn_in_trait)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = note: `#[warn(incomplete_features)]` on by default

warning: the feature `async_fn_in_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/missing.rs:3:34
   |
LL | #![feature(return_type_notation, async_fn_in_trait)]
   |                                  ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #91611 <https://github.com/rust-lang/rust/issues/91611> for more information

error: cannot find associated function `methid` in trait `Trait`
  --> $DIR/missing.rs:11:17
   |
LL | fn bar<T: Trait<methid(): Send>>() {}
   |                 ^^^^^^^^^^^^^^

error: aborting due to previous error; 2 warnings emitted

